<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_secondary_dark"
    android:gravity="center"
    tools:context=".UserSignUpActivity">

    <RelativeLayout
        android:id="@+id/childRelativelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/curved_design">


        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/work_sans_medium"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/bg_secondary_dark"
            android:textSize="29sp" />
        <!-- Widgets on the left -->
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_sign_up"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/name"
            android:textColor="@color/bg_primary_dark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/email"
            android:textColor="@color/bg_primary_dark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/password"
            android:textColor="@color/bg_primary_dark"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword"
            android:layout_marginLeft="29dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/mobile"
            android:textColor="@color/bg_primary_dark"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMobile"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#4942E4"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/register"
            android:textSize="16sp" />


        <!-- Widgets on the right /user interaction -->
        <EditText
            android:id="@+id/inpName"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvName"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_toEndOf="@+id/tvName"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inpEmail"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvEmail"
            android:layout_marginStart="50dp"
            android:inputType="textEmailAddress"
            android:layout_toEndOf="@+id/tvEmail"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/inpPassword"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvPassword"
            android:layout_toEndOf="@+id/tvPassword"
            android:layout_below="@+id/inpEmail"
            android:layout_marginLeft="8dp"
            android:inputType="textPassword"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/inpMobileNumber"
            android:inputType="phone"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvMobile"
            android:layout_marginStart="40dp"
            android:layout_toEndOf="@+id/tvMobile"
            android:hint="@string/mobile" />


    </RelativeLayout>
    <!-- Facebook Login button provided by Facebook SDK -->
    <com.facebook.login.widget.LoginButton

        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/childRelativelayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp" />

</RelativeLayout>